[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/profile/UserProfile.gd" type="Script" id=1]
[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://menu.png" type="Texture" id=4]

[node name="UserProfile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -6.0
margin_right = -45.0
margin_bottom = -56.0
custom_constants/separation = 50

[node name="Title" parent="Container" instance=ExtResource( 2 )]
text = "Responda"

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_top = 207.0
margin_right = 1870.0
margin_bottom = 535.0
custom_constants/separation = 15

[node name="Name" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_right = 1435.0
margin_bottom = 89.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Name"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Cor Favorita:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Name"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Idade" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_top = 104.0
margin_right = 1435.0
margin_bottom = 183.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Idade"]
margin_left = 225.0
margin_right = 675.0
margin_bottom = 79.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Idade:"
align = 2

[node name="SpinBox" type="SpinBox" parent="Container/VBoxContainer2/Idade"]
margin_left = 700.0
margin_right = 774.0
margin_bottom = 79.0

[node name="Choice" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_top = 198.0
margin_right = 1870.0
margin_bottom = 198.0
alignment = 1

[node name="Choice1" type="Label" parent="Container/VBoxContainer2/Choice"]
visible = false
show_behind_parent = true
margin_left = 935.0
margin_right = 935.0
margin_bottom = 14.0

[node name="AmizadeSabrina" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_top = 213.0
margin_right = 1870.0
margin_bottom = 213.0

[node name="AmizadeComSabrina" type="SpinBox" parent="Container/VBoxContainer2/AmizadeSabrina"]
visible = false
margin_top = 1218.0
margin_right = -1060.0
margin_bottom = 24.0

[node name="ConfirmButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 757.0
margin_top = 228.0
margin_right = 1113.0
margin_bottom = 313.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Confirmar"

[node name="Control" type="Control" parent="Container/VBoxContainer2"]
margin_top = 328.0
margin_right = 1870.0
margin_bottom = 328.0

[node name="Notification" type="Label" parent="Container"]
margin_top = 585.0
margin_right = 1870.0
margin_bottom = 664.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Menu" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 960, 537 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Container/VBoxContainer2/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
